--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
   <body>
     <header id="header">
@@ -24,10 +25,10 @@
 
     <main id="site-main">
       <div class="container">
-        <div class="box-nav d-flex-justify-between">
+        <div class="box-nav d-flex justify-between">
           <a href="/add-user" class="border-shadow">
             <span class="text-gradient"
-              >New User <i class="fas fa-user"></i></span
+              >New User <i class="fas fa-user"></i> </span
           ></a>
         </div>
         <form action="/" method="POST">
