--- a/views/add_user.html
+++ b/views/add_user.html
@@ -65,22 +65,22 @@
               <label for="gender" class="text-light">Gender</label>
               <div class="radio inline">
                 <input type="radio" name="gender" value="Female" />
-                <label for="gender" class="text-light">Female</label>
+                <label for="gender" class="radio-label">Female</label>
               </div>
               <div class="radio inline">
                 <input type="radio" name="gender" value="Male" />
-                <label for="gender" class="text-light">Male</label>
+                <label for="gender" class="radio-label">Male</label>
               </div>
             </div>
             <div class="form-group">
               <label for="status" class="text-light">status</label>
               <div class="radio inline">
                 <input type="radio" name="status" value="Active" />
-                <label for="status" class="text-light">Active</label>
+                <label for="status" class="radio-label">Active</label>
               </div>
               <div class="radio inline">
                 <input type="radio" name="status" value="Inactive" />
-                <label for="status" class="text-light">Inactive</label>
+                <label for="status" class="radio-label">Inactive</label>
               </div>
             </div>
             <div class="form-group">
