completed new user styles except for its button (which has a missing id that I have to find)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,4 +206,31 @@ table {
   transition: all 250ms ease;
 }
 
-.radio input[type="radio"];
+.radio input[type="radio"]:checked + .radio-label:before {
+  background-color: #06d6a0;
+  box-shadow: inset 0 0 0 4px #e9ecef;
+}
+
+.radio input[type="radio"]:focus + .radio-label:before {
+  outline: none;
+  border-color: #06d6a0;
+}
+
+.radio input[type="radio"]:disabled + .radio-label:before {
+  box-shadow: inset 0 0 0 4px #e9ecef;
+  border-color: #b4b4b4;
+  background: #b4b4b4;
+}
+
+#update_user.form-group .btn,
+#add_user.form-group .btn {
+  width: 100%;
+  padding: 0.9em 1em;
+  background-color: #06d6a0;
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-size: 1em;
+  cursor: pointer;
+  border-radius: 0.2em;
+  margin: 0.5em 0;
+}
